# radar-waveform-eval

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: hopping_default.json  lfm_default.json  phase_code_default.json  scenario_default.json  scoring_default.json
desktop_app/: __init__.py  app.py  app_state.py  main.py  ui_theme.py  version.py
desktop_app/pages/: __init__.py  comparison_page.py  evaluation_page.py  report_page.py  scenario_page.py  visualization_page.py  waveform_page.py
desktop_app/services/: __init__.py  evaluation_service.py  export_service.py  project_service.py  report_service.py
desktop_app/widgets/: __init__.py  (+5 more)
docs/: development_steps.md  export_format_v1.md  metrics_v1.md  model_assumptions_v1.md  phase_code_waveform_generation_extract.md  product_plan_v1.md  release_checklist_v1.md  user_guide_v1.md
examples/: README.md  lfm_example.rwep.json  phase_code_example.rwep.json
radar_eval_core/: __init__.py  ambiguity.py  detection.py  engineering.py  evaluation_pipeline.py  jamming.py  lpi.py  matched_filter.py  resolution.py  schemas.py  scoring.py  waveforms.py
scripts/: build_app.py  run_eval_cli.py
tests/: test_ambiguity.py  test_cli.py  test_desktop_imports.py  test_detection.py  test_engineering.py  test_evaluation_pipeline.py  test_evaluation_service.py  test_examples.py  test_export_service.py  test_jamming.py  test_lpi.py  test_matched_filter.py  test_project_imports.py  test_project_service.py  test_report_service.py  test_resolution.py  test_schemas.py  test_scoring.py  test_version.py  test_waveforms.py
(+4 files in other folders)
